--- a/W2/Index.html
+++ b/W2/Index.html
@@ -7,19 +7,19 @@
 
 <body>
 
-    <header>
-        <h>Image</h>
-        <p>practice how to add image to a website</p>
+    <header style="text-align: center; background-color: rgb(228, 182, 224);">
+        <h style="color: black; font-weight: bolder; font-size: 40px;">Image</h>
+        <p style="color: aqua; font-size: 20px; text-align:center;">practice how to add image to a website</p>
     </header>
 
     <section>
-        <h2>Smple image Title</h2>
+        <h2 style="font-family: 'Courier New', Courier, monospace;">Smple image Title</h2>
         <img src="image/1.jpg" alt="Test image for demo">
         <p>this is Sample image for a demo</p>
     </section>
 
-    <section>
-        <h2>Smple image Title</h2>
+    <section >
+        <h2 style="text-align: center;">Smple image Title</h2>
         <img src="image/1.jpg" alt="Test image for demo" width="500">
         <p>this is Sample image for a demo</p>
     </section>
