--- a/W2/Index.html
+++ b/W2/Index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" <head>
+<html lang="en">
 <meta charset="utf-8">
 <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
 <title>Sample Web demo for image</title>
+<link rel="stylesheet" href="Styles/IndexStyle.css">
+<style>
+    body{
+        background-color: lightgray;
+        t-family: Arial, Helvetica, sans-serif;
+        padding: 10;
+    }
+    img{
+        border: 5px solid rgb(255, 255, 255);
+        align-items: center;
+    }
+</style>
 </head>
 
 <body>
@@ -55,3 +67,4 @@
 
 
 </body>
+</html>
