--- a/W2/Index.html
+++ b/W2/Index.html
@@ -59,7 +59,7 @@
 
     <section>
         <h2>Sample video demo</h2>
-        <iframe width="1862" height="789" src="https://www.youtube.com/embed/kUee3A5wqAY"
+        <iframe width="100%" height="800" src="https://www.youtube.com/embed/kUee3A5wqAY"
             title="Top 10 Peaceful Sri Lankans (Meme)" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
